2003-01-19  Roman Hodek  <roman@hodek.net>

	* po/gnocatan.pot: rebuilt

	* po/de.po, po/es.po: updated from new .pot; de is fixed already
	(not many changes...), es still needs more translations
	
	* ai/greedy.c: AI chat spelling fixes by Tril <tril@tunes.org>

	* client/trade.c (is_domestic_trade_allowed): patch by Tril
	<tril@tunes.org>: allow trade even if nobody has the resource in
	question, in case somebody wants to give away for free :)

	* gnocatan.spec: applied patch by Daniel Jensen
	<jensend@iname.com>, adding manpages and fixing images (release 3)

2003-01-16  Steve Langasek  <vorlon@debian.org>
	* common/meta.h, meta-server/meta-report: change to using
	  gnocatan.debian.net as the default metaserver instead of
	  the defunct term1.dccs.com.au.

2003-01-15  Jeff Breidenbach  <jab@debian.org>

	* themes.c: incorporate string terminator patch from Hal Eisen

2003-01-15  Steve Langasek  <vorlon@debian.org>
	* gnocatan.spec: RPM packaging updates from Daniel Jensen

2003-01-14  Steve Langasek  <vorlon@debian.org>
	* client/Makefile.am: add an explicit dependency on authors.h to
	  make sure it's generated when we need it.

2003-01-12  Jeff Breidenbach  <jab@debian.org>

	* AUTHORS: adjust my email

2003-01-12  Steve Langasek  <vorlon@debian.org>
	* ai/Makefile.am: don't link GNOME libs for a binary that has
	  no gui.

2003-01-11  Steve Langasek  <vorlon@debian.org>
	* client/Makefile.am, client/guimap.c, client/theme.c,
	  debian/rules: further refine the placement of image files.

	* configure.in, ai/client.c, ai/develop.c, ai/player.c,
	  ai/resource.c, client/chat.c, client/client.c,
	  client/develop.c, client/player.c, client/resource.c,
	  client/settingscreen.c, po/de.po, po/es.po, po/gnocatan.pot:
	  Gettext enhancements: don't construct strings by
	  concatenation, don't mark strings for translation with _N()
	  that are non-translatable (such as '%s').
	  Add Spanish to the list of supported languages and begin
	  localizing.