@@ -293,17 +293,17 @@ static gboolean check_other_players(StateMachine *sm)
 		return TRUE;
 	}
 	if (sm_recv(sm, "receives %R", resource_list)) {
-		player_resource_action(player_num, _("%s receives %s\n"),
+		player_resource_action(player_num, _("%s receives %s.\n"),
 				       resource_list, 1);
 		return TRUE;
 	}
 	if (sm_recv(sm, "spent %R", resource_list)) {
-		player_resource_action(player_num, _("%s spent %s\n"),
+		player_resource_action(player_num, _("%s spent %s.\n"),
 				       resource_list, -1);
 		return TRUE;
 	}
 	if (sm_recv(sm, "refund %R", resource_list)) {
-		player_resource_action(player_num, _("%s is refunded %s\n"),
+		player_resource_action(player_num, _("%s is refunded %s.\n"),
 				       resource_list, 1);
 		return TRUE;
 	}
@@ -1668,7 +1668,7 @@ static gboolean mode_discard(StateMachine *sm, gint event)
 		}
 		if (sm_recv(sm, "player %d discarded %R",
 			    &player_num, resource_list)) {
-			player_resource_action(player_num, _("%s discarded %s\n"),
+			player_resource_action(player_num, _("%s discarded %s.\n"),
 					       resource_list, -1);
 			discard_player_did(player_num, resource_list);
 			if (discard_num_remaining() == 0) {
